<resources>
    <string name="app_name">MY NDP Songs</string>
    <string name="title">Song Title</string>
    <string name="singers">Singers</string>
    <string name="year">Year</string>
    <string name="insert">INSERT</string>
    <string name="showlist">SHOW LIST</string>
    <string name="stars">Stars</string>
    <string name="show">SHOW ALL SONGS WITH 5 STARS</string>
    <string name="update">UPDATE</string>
    <string name="delete">ERADICATE</string>
    <string name="cancel">CANCEL</string>
    <string name="filter">Please type here to filter by year: </string>
</resources>